--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -233,3 +233,48 @@ table tbody tr:hover{
     transition: 0.3s ease-in-out;
     transform: translateY(-2px);
 }
+
+@media screen and (max-width: 1140px) {
+    .videos{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .videos iframe{
+        margin: 10px 0px;
+        
+    }
+}
+
+@media screen and (max-width: 910px) {
+    .inputs{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .input{
+        width: 450px;
+    }
+    
+}
+
+@media screen and (max-width: 570px) {
+    .videos iframe{
+        width: 350px;
+    }
+    .input{
+        width: 350px;
+    }
+    .select {
+        width: 350px !important;
+        font-size: 20px;
+    }
+    option{
+        width: 350px;
+        font-size: 20px;
+    }
+
+    .title {
+        font-size: 10px;
+    }
+}
